--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "express": "^4.17.1",
+    "firebase": "^8.0.2",
+    "googleapis": "^39.2.0",
+    "nodemon": "^2.0.6",
+    "sirv-cli": "^1.0.0",
+    "svelte-routing": "^1.4.2"
   }
 }
